# Rclusterpp

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.md  Rclusterpp.Rproj  cleanup  configure  configure.ac
R/: Rclusterpp.hclust.R  Rclusterpp.package.skeleton.R  RclusterppLdpath.R  inline.R
inst/: WORDLIST
inst/doc/: Rclusterpp.Rnw
inst/examples/: benchmark.R  clustering.R
inst/include/: EigenSugar.h  Rclusterpp.h  RclusterppEigenArrayPlugin.h  RclusterppEigenMatrixPlugin.h  RclusterppEigenSugar.h  RclusterppForward.h
inst/include/Rclusterpp/: algorithm.h  cluster.h  hclust.h  method.h  util.h
inst/include/Rclusterpp/sugar/: square.h
inst/skeleton/: Makevars.in  Makevars.win  cleanup  configure  configure.ac  rclusterpp_hello_world.cpp  rclusterpp_hello_world.h
inst/unit_tests/: Makefile  ambiguous.Rdata  runit.hclust.R  runit.storedistance.R
man/: Rclusterpp-package.Rd  Rclusterpp.hclust.Rd  Rclusterpp.linkageKinds.Rd  Rclusterpp.linkage_kinds.Rd  Rclusterpp.package.skeleton.Rd  Rclusterpp.setThreads.Rd  Rclusterpp.set_num_threads.Rd
src/: Makevars  Makevars.in  Makevars.win  hclust.cpp
tests/: doRUnit.R
vignettes/: Rclusterpp.Rmd  ref.bib
